footer social icon spacing correction done

--- a/style.css
+++ b/style.css
@@ -344,3 +344,7 @@ footer{
     padding: 32px 150px;
     margin-top: 100px;
 }
+
+footer a img{
+    margin-right: 10px;
+}
